--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,6 +25,7 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         android:layout_marginTop="70dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,6 +45,7 @@
         android:text="Browse by diet"
         android:textColor="@color/black"
         android:textSize="16dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selectIngredientsTextView" />
@@ -64,6 +66,7 @@
         android:text="Select ingredients "
         android:textStyle="bold"
         android:textSize="20sp"
+        android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@id/cuisineRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="50dp"
